--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -1,7 +1,7 @@
 <h1> Cyber Punk Blogging Ring </h1>
 <ul>
 <% @blogs.each do|blog| %>
-<li> <%= link_to blog.title, blog_path(blog) %> </li>
+<li> <%= link_to blog.title, blogs_path(blog) %> </li>
 <% end %>
 </ul>
 
