--- a/app/views/blog/show.html.erb
+++ b/app/views/blog/show.html.erb
@@ -2,4 +2,5 @@
 <br/>
 <br/>
 <p><%= @blog.content %><p>
-<button> <%= link_to 'Home', blogs_path %> </button>
+<button><%= link_to 'Home', blogs_path %></button>
+<button><%= link_to 'Delete Post', delete_blog_path(@blog), data: { "turbo-method": :delete, turbo_confirm: "Are you sure you want to delete #{@blog.title}?" } %></button>
