--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,24 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+body{
+background-image: url('Cyberpunk_background.webp');
+background-size: cover;
+}
+
+.text-glow {
+  color: #fff; /* Text color */
+  text-shadow: 0 0 10px #00ff00, /* Glow color and size */
+               0 0 20px #00ff00, /* Glow color and size */
+               0 0 30px #00ff00, /* Glow color and size */
+               0 0 40px #00ff00; /* Glow color and size */
+}
+
+.title{
+  display: flex;
+  justify-content: center;
+}
+
+li{
+  list-style-type: none;
+  text-decoration: none !important;
+}
+
+
