--- a/app/views/blog/edit.html.erb
+++ b/app/views/blog/edit.html.erb
@@ -1,4 +1,4 @@
-<h3>Edit Your Post</h3>
+<h3 class = "title"><%= content_tag :div, "Edit Post", class: "text-glow" %> </h3>
 <%= render partial: 'form', locals: {blog: @blog}  %>
 <br/>
-<button><%= link_to "Blog Post", blog_path %></button>
+<button class = "text-glow"><%= link_to "Blog Post", blog_path %></button>
