--- a/app/views/blog/new.html.erb
+++ b/app/views/blog/new.html.erb
@@ -1,5 +1,5 @@
-<h3>Add a New Blog Post</h3>
+<h3 class = "title"><%= content_tag :div, "Add A New Blog Post", class: "text-glow" %></h3>
 
 <%= render partial: 'form', locals: {blog: @blog}%>
 <br/>
-<button><%= link_to 'Home', blogs_path%></button>
+<button class = "text-glow"><%= link_to 'Home', blogs_path%></button>
