--- a/app/views/blog/show.html.erb
+++ b/app/views/blog/show.html.erb
@@ -1,7 +1,7 @@
-<h1><%= @blog.title %></h1>
+<h1 class = "title"><%= content_tag :div, "#{@blog.title}", class: "text-glow" %></h1>
 <br/>
 <br/>
-<p><%= @blog.content %><p>
-<button><%= link_to 'Home', blogs_path %></button>
-<button><%= link_to 'Delete Post', delete_blog_path(@blog), data: { "turbo-method": :delete, turbo_confirm: "Are you sure you want to delete #{@blog.title}?" } %></button>
-<button><%= link_to "Edit Post", edit_blog_path(@blog) %></button>
+<p class = "text-glow"><%= @blog.content %><p>
+<button class = "text-glow"><%= link_to 'Home', blogs_path %></button>
+<button class = "text-glow"><%= link_to 'Delete Post', delete_blog_path(@blog), data: { "turbo-method": :delete, turbo_confirm: "Are you sure you want to delete #{@blog.title}?" } %></button>
+<button class = "text-glow"><%= link_to "Edit Post", edit_blog_path(@blog) %></button>
